# handwriting-demo

./: pyproject.toml  setup-graphviz.sh  setup.sh  start-webui.sh
.devcontainer/: devcontainer.json
notebooks/: handwriting.ipynb
webui/: bun.lockb  package.json
webui/src/routes/: +page.svelte
webui/src/routes/predict/: +server.ts
