[project]
name = "handwriting-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.5",
    "matplotlib>=3.9.2",
    "pydot>=3.0.2",
    "tensorflow>=2.17.0",
]

[tool.setuptools]
packages = ["notebooks"]
